2009-04-23  Zan Dobersek  <zandobersek@gmail.com>

        Reviewed by Gustavo Noronha.

        https://bugs.webkit.org/show_bug.cgi?id=15654
        GdkPixbuf support for ImageCairo

        Add support for converting a Cairo surface to a GdkPixbuf.

        * platform/graphics/BitmapImage.h:
        * platform/graphics/Image.h:
        (WebCore::Image::getGdkPixbuf):
        * platform/graphics/gtk/ImageGtk.cpp:
        (WebCore::BitmapImage::getGdkPixbuf):

2009-04-23  Kenneth Rohde Christiansen  <kenneth.christiansen@openbossa.org>

        Reviewed by Simon Hausmann.

        Make windowed plugins (on X11, Qt) behave nicer with wheel scrolling.

        Basically, what we want is to send wheel events to the plugin *only*
        when it has focus, or else send it to the parent frame.

        This is a work around, and basically what we do, is to steal the
        wheel events from the plugin, modify the window ID, and put the
        event back into the Qt event loop.

        * plugins/qt/PluginContainerQt.cpp:
        (PluginClientWrapper::PluginClientWrapper):
        (PluginClientWrapper::~PluginClientWrapper):
        (PluginClientWrapper::x11Event):
        (PluginContainerQt::PluginContainerQt):
        (PluginContainerQt::~PluginContainerQt):
        (PluginContainerQt::on_clientClosed):
        (PluginContainerQt::on_clientIsEmbedded):
        (PluginContainerQt::redirectWheelEventsToParent):
        (PluginContainerQt::x11Event):
        (PluginContainerQt::focusInEvent):
        * plugins/qt/PluginContainerQt.h:

2009-04-22  Brady Eidson  <beidson@apple.com>

        Reviewed by Maciej Stachowiak

        <rdar://problem/6786961> - "Are you sure you want to resubmit this form?" nag displays twice.

        For most loads, we were consulting the navigation policy delegate twice.  Once from FrameLoader before
        the load started and once from MainResourceLoader in its willSendRequest callback.
