@@ -57,7 +57,11 @@ GdkPixbuf* BitmapImage::getGdkPixbuf()
     int width = cairo_image_surface_get_width(frameAtIndex(currentFrame()));
     int height = cairo_image_surface_get_height(frameAtIndex(currentFrame()));
 
-    GdkPixmap* pixmap = gdk_pixmap_new(0, width, height, 32);
+    int bestDepth = gdk_visual_get_best_depth();
+    GdkColormap* cmap = gdk_colormap_new(gdk_visual_get_best_with_depth(bestDepth), true);
+
+    GdkPixmap* pixmap = gdk_pixmap_new(0, width, height, bestDepth);
+    gdk_drawable_set_colormap(GDK_DRAWABLE(pixmap), cmap);
     cairo_t* cr = gdk_cairo_create(GDK_DRAWABLE(pixmap));
     cairo_set_source_surface(cr, frameAtIndex(currentFrame()), 0, 0);
     cairo_paint(cr);
@@ -65,6 +69,7 @@ GdkPixbuf* BitmapImage::getGdkPixbuf()
 
     GdkPixbuf* pixbuf = gdk_pixbuf_get_from_drawable(0, GDK_DRAWABLE(pixmap), 0, 0, 0, 0, 0, width, height);
     g_object_unref(pixmap);
+    g_object_unref(cmap);
 
     return pixbuf;
 }
